# rust-test

./: .env  Cargo.toml  README.md
src/: main.rs
