[package]
name = "rust-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "8.2"
reqwest = {version="0.11", features=["blocking", "json", "serde_json"]}
serde = "1.0.126"
serde_json = "1.0.64"
chrono = "0.4.19"

eyre = "0.6"
color-eyre = "0.5"
dotenv = "0.15"
